# streamlit_luciano_borba

./: README.md  aula01.py  aula03.py  aula04.py  aula05.py  aula06.py  aula08.py  aula11.py  aula12.py  aula13.py  pyproject.toml
data/: dim_global.xlsx
